@@ -1,18 +1,21 @@
 DIST ecj-4.3.jar 1377431 RMD160 48fa985f763838bed750aa64a2fa997734438099 SHA1 da254944309a8387aa39323fe7bb7216a4518311 SHA256 9de193ea393ed50d868b730bad6916f7a8ef4ba80216f8606d3e1a0dd886e74b
-DIST gcc-4.3.4-espf-0.3.9.tar.bz2 18852 RMD160 0ff6ab00b204153fa757e73b6e87ca8e01489052 SHA1 1c36bb6f787e5605d9c58d806cc747e495d9df16 SHA256 47ffe4b7efd27631fc38ee85f2312ae9b1de4ba75940ab6f84d39537f6c102ea
 DIST gcc-4.3.4-patches-1.1.tar.bz2 75500 RMD160 5b02ac06f307eeec81644561cc1ec21abf32f207 SHA1 9544b0a3173a564d3a53b64c0c44d1017db694e7 SHA256 5fc2b803bcc0dfedff17dc7af1abd9d7ff4e61ad69b1a25991a920205c7f219e
+DIST gcc-4.3.4-piepatches-v10.1.5.tar.bz2 6026 RMD160 ce9b48cbd6febbec30bff3d783213dcc22532cba SHA1 0d47299c12ce7d261789a6fc18b900bed9772258 SHA256 30100a00d2d202fab78d250ec4c3844239294cd53ea347faa81b55f795712f51
+DIST gcc-4.3.4-specs-0.9.5.tar.bz2 1690 RMD160 2198d4c1e2ca53351e4132c819359fe2fc646fdf SHA1 1ad2be41f63888660d16e03ff5d420e01a922d9c SHA256 6b4a391fc775e735135d02c869cc64942a0f87a3275937e18dd33675172021c7
 DIST gcc-4.3.4-uclibc-patches-1.0.tar.bz2 2298 RMD160 111f83201a780a0e8af442b90edddac0465ecccb SHA1 5bbeeeec53d1a3a75a856c30dd0107606a468a03 SHA256 dc475684868cbd38abeb9759bcab1cc6f2de81ff0743a80aef2753f5b1599d00
 DIST gcc-4.3.4.tar.bz2 59368714 RMD160 f23c73a07e15faecaa1bac045f36f4d16be1ddb5 SHA1 cf5248733f26aafa361b3583e74783181eeb88b9 SHA256 e572453bdb74cc4ceebfab9ffb411d9678343dff5bf86e9338d42fdd0818aa65
-DIST gcc-4.4.3-espf-0.3.9.tar.bz2 18290 RMD160 6acc11b4550846ea6cf03f9b96942ab58898dab5 SHA1 718ea24ce9eba8e5bb28d245331200dd1bdbcb7b SHA256 943ce8b9c6332025b052ac23bdabb2c2bf1e4b3ea5310d77b32c6c7fbaaef144
 DIST gcc-4.4.3-patches-1.2.tar.bz2 12802 RMD160 4fed8dfde025fb397c29d11359c6583c40c8e217 SHA1 226ae5c9e177ac18b2a0f76c84233b33707f619b SHA256 d59016edf9c0d1f7158928ac5c29196af96ed34de17f9b0cefb5087faed3d6db
+DIST gcc-4.4.3-piepatches-v0.4.1.tar.bz2 17989 RMD160 55d7dea672ed251706ede61564892934b1a943ff SHA1 822da6263dce390a7d26570e57a8509618058c3a SHA256 6742e40da70bdf2b964f7c782dbce6b0a89b01583203a297c8595234b18884ba
+DIST gcc-4.4.3-specs-0.1.8.tar.bz2 1993 RMD160 bfc7a4309c6866b1e162cae03083ad7f732b7204 SHA1 4abe17a1b8fbe7256ec56fef01316a210ebf468a SHA256 7da905dc02c422a21107489b7b8c9ea1c82a266d1ac397da7a6d9f9e657db80e
 DIST gcc-4.4.3-uclibc-patches-1.0.tar.bz2 3014 RMD160 4646449073c54a43f1b72382ab3c611789e6cb59 SHA1 7bb2d5ae871f1bbed51198c274518d2c8bc06689 SHA256 4b44eb274f27cc8ffb0e61e90d829a7a87fd0b49df6f31e7cb3071cc96c00df1
 DIST gcc-4.4.3.tar.bz2 62944934 RMD160 b51afac3cb77ee3dc09d29c2f85936482ed82ab2 SHA1 619766282734728539ce58a5c383cb371f1999c7 SHA256 97ed664694b02b4d58ac2cafe443d02a388f9cb3645e7778843b5086a5fec040
-DIST gcc-4.5.0-espf-0.3.9.tar.bz2 15541 RMD160 264e5e857dde1968ed540366a365b3da3625a629 SHA1 9efe87e9c581d23c05fd7fb86953c6ce766d84ba SHA256 5b77c83c34f525c8f9e11199796e0807cf58c097f194d8226dabd926ea0d4ca1
 DIST gcc-4.5.0-patches-1.0.tar.bz2 6709 RMD160 bfcd1d4b195706242eac20693e78293734b03519 SHA1 e7e82ba95611e653efe77ecd601ea25acdfc6f69 SHA256 e2d31437ab4e9fe0145d89d4128446015ae6395c40903ebb1831f74f75e11602
+DIST gcc-4.5.0-piepatches-v0.4.1.tar.bz2 15672 RMD160 d6f8ae14f952a65f7279010e9e630f3baf469756 SHA1 765bba191ca9137a9a90435dc1fd03de7217c22a SHA256 8132da58b1a5fb492e5341ce6ac554961b33a09a92ec27c78259d1b2d9875830
+DIST gcc-4.5.0-specs-0.1.8.tar.bz2 1957 RMD160 3c10f96ea3b90c2ab402a8f97aa8f4bb3ddf225f SHA1 cbf7c47785544db09dc00c738251c6fb78999792 SHA256 59f32254d118c184075f7f4eec719819607c3ad656e40b3479a5944777997be7
 DIST gcc-4.5.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 860f77f9ae11f24a760cf763b9965ef64dd9d416 SHA1 ec67f80f0b5da78edbe6a85eb3b93090a628f535 SHA256 5faa9c4eac7c67afeae081a936dd6406f11a930c3c240a83d76ffdee74b04e6f
 DIST gcc-4.5.0.tar.bz2 65941778 RMD160 84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 SHA1 4beb8366ce1883f37255aa57f0258e7d3cd13a9b SHA256 8293e9efa68a8ec0fdd0dae9c9bd128a8e742566acd9c8fbcfe79d98ed3756c8
-EBUILD gcc-4.3.4-r3.ebuild 2239 RMD160 f616863fe155d1938ba03fb405980938789b2b0e SHA1 7dca1c60675e4ce6f7a0d6c9d3377964614fa62b SHA256 1be64ac6a6f0382a4db51826c8153d0bb3be8bdc5a65150150bf3fff795e9ddf
-EBUILD gcc-4.4.3-r3.ebuild 2358 RMD160 1f3b1d50ef453056dfe12c456115c1e74a32f7bb SHA1 07e74509e4048b5602bd7e2ab0c4c88333b9818d SHA256 ad90a67aaf2cc7c8760476463dd2b4eb1c63002d21a50aed258ec43b81b718ae
-EBUILD gcc-4.5.0.ebuild 1992 RMD160 22be7d94fdbf2a6f570eca58f3bb82a98cd80e08 SHA1 ede2eac1089ac3b24f6663ee852a32505bae0bb9 SHA256 41cfc0ac4830f7f498c0c8e03d152964c1dec0257f87d8ed34e1be04265d64cb
-MISC ChangeLog 2253 RMD160 7b590ab56f3f393fa3a05a16098df494654b77ef SHA1 1d4b59a854a9bf64213ac7d20f133884bfc8d7eb SHA256 13fdbf8116fdfb2554b7f61d8f3c6d76534c981805e3e2f5b94ab50b831408e1
+EBUILD gcc-4.3.4-r4.ebuild 2401 RMD160 7de41b6507be443555e0e7c4d2bdafcf09ae4406 SHA1 f4d997b52cf97ea9bf101aa085285e77fe4d9136 SHA256 5cf23424044d39ecdf0bb2cf22525261be6617de289a5ede98a631ae504800b9
+EBUILD gcc-4.4.3-r4.ebuild 2464 RMD160 3611499ae2abb61edcc279bfd3033f35241b9866 SHA1 12f8bbbddc9949813c44a246264081d8e30c09b9 SHA256 7441ff87b6293dc1d252da6c1ad2f0de680199d94f4a9b9df21672b1eef5f00e
+EBUILD gcc-4.5.0-r1.ebuild 2217 RMD160 96da6f1a4997c68a20b2d5a9e9b0ba2e1bf64825 SHA1 ee6a1c03528d47d2ca3935dce5049e02490f36e2 SHA256 67b53d4555a4593a3afb369a8fa295101dfa34bb1021e97530bb23036659bb63
+MISC ChangeLog 2568 RMD160 9b406933e644a27e60f3f43130396aa6c300d472 SHA1 6d0e9a4c967d93cce358a800437bdaa9a3ff36ae SHA256 3372ceb2c0cb7a7543bd807d4b76bb94bc94fcfce4dea3f49480b2f92549e1e2
 MISC metadata.xml 1678 RMD160 7d8df302684ecf0e23caf763d3fcee267d40866b SHA1 f9a035b4a7bf8a6fbf9e1627f777b86f30813517 SHA256 3e67d554a8e3135943623ab276d6871582fda0cdb556d31531b369d8c0b277d7
